syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ForceUpdateInfo.proto";
import "StopServerInfo.proto";
import "RegionInfo.proto";

message QueryCurrRegionHttpRsp {
	oneof Detail {
		ForceUpdateInfo force_udpate = 4;
		StopServerInfo stop_server = 5;
	}
	int32 retcode = 1;
	string msg = 2;
	RegionInfo region_info = 3;
	bytes client_secret_key = 11;
	bytes region_custom_config_encrypted = 12;
	bytes client_region_custom_config_encrypted = 13;
}
