syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "RegionSimpleInfo.proto";

message QueryRegionListHttpRsp {
	int32 retcode = 1;
	repeated RegionSimpleInfo region_list = 2;
	bytes client_secret_key = 5;
	bytes client_custom_config_encrypted = 6;
	bool enable_login_pc = 7;
}
